2003-03-08  Kevin Vandersloot <kfv101@psu.edu>

	* docs/ja/Makefile.am: fix the build

2003-03-02  Takeshi AIHANA <aihana@gnome.gr.jp>

	* docs/ja/*: Added new documents for GNOME 2.2 translated by
	KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>.
	* docs/Makefile.am: added ja into SUBDIRS.

2003-01-25 John Fleck <jfleck@inkstain.net>

	* docs/C/battstat.xml
	fixing typo, bug #104340

2003-01-21  Arvind Samptur <arvind.samptur@wipro.com>
	* battstat_applet.c (destroy_applet): Destroy the
	preferences dialog when destroying the applet.

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_BattstatApplet.server.in.in: added bugzilla attributtes

2002-12-08  Kevin Vandersloot <kfv101@psu.edu>

        * battstat_applet.c, Makefile.am: hook up help menu. Fixes bug #91297

2002-09-15  Juan Salaverria <rael@vectorstar.net>
	
	* GNOME_BattstatApplet.xml: Added a separator in the
	menu and ordered the menu items. May fix bug #89864

2002-11-22  Kevin Vandersloot <kfv101@psu.edu>

	* acpi-linux.c: don't hardcode battery directory names and allow for multiple
	batteries. Patch from Hanno Böck <hanno@gmx.de>. Fixes bugs 89681 and
	90122.

2002-10-25  Kevin Vandersloot <kfv101@psu.edu>

        * battstat_applet.c: realize the applet widget on startup
        so applet->window is not NULL. Fixes the oft duped crash
        on startup bug #86458

2002-09-19  Mark McLoughlin  <mark@skynet.ie>

	* battstat_applet.c: (battstat_error_dialog), (about_cb):
	* properties.c: (prop_cb): kill the HAVE_GTK_MULTIHEAD
	conditionals - we require gtk HEAD now.

2002-08-14  Mark McLoughlin  <mark@skynet.ie>

	* battstat_applet.c: (help_cb), (helppref_cb):
	add a couple of FIXMEs.

2002-07-18  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install applet in libexec.

	* GNOME_BattstatApplet.server.in: move .server.in to
	.server.in.in to allow for libexec dir substitution.

2002-07-11  Kevin Vandersloot <kfv101@psu.edu>

	* *.glade: Fix misspelling. Patch by Heath Harrelson. 