@@ -1,3 +1,8 @@
+2003-04-24  Kevin Vandersloot <kfv101@psu.edu>
+
+	* acpi-linux.c: Hanlde gracefully when acpi directories don't exist. Patch
+	from Manuel Clos. Fixes bug #111089
+
 2003-03-08  Kevin Vandersloot <kfv101@psu.edu>
 
 	* docs/ja/Makefile.am: fix the build
